fix(deps): bump the all-deps group with 21 updates (#435)
* fix(deps): bump the all-deps group with 21 updates

Bumps the all-deps group with 21 updates:

| Package | From | To |
| --- | --- | --- |
| io.vertx:vertx-stack-depchain | `5.0.12` | `5.1.5` |
| [org.junit:junit-bom](https://github.com/junit-team/junit-framework) | `5.12.2` | `6.1.2` |
| [org.folio:mod-inventory-storage-dto](https://github.com/folio-org/mod-inventory-storage) | `30.0.0` | `30.0.3` |
| org.glassfish.jersey.core:jersey-common | `2.46` | `4.0.2` |
| org.slf4j:slf4j-api | `2.0.17` | `2.0.18` |
| org.apache.maven:maven-model | `3.9.9` | `3.9.16` |
| commons-io:commons-io | `2.19.0` | `2.22.0` |
| [com.google.guava:guava](https://github.com/google/guava) | `33.4.8-jre` | `33.6.0-jre` |
| [org.graalvm.js:js](https://github.com/graalvm/graaljs) | `24.2.1` | `25.1.3` |
| [org.graalvm.js:js-scriptengine](https://github.com/graalvm/graaljs) | `24.2.1` | `25.1.3` |
| [org.mockito:mockito-core](https://github.com/mockito/mockito) | `5.17.0` | `5.23.0` |
| [org.codehaus.mojo:exec-maven-plugin](https://github.com/mojohaus/exec-maven-plugin) | `3.5.0` | `3.6.3` |
| [org.codehaus.mojo:properties-maven-plugin](https://github.com/mojohaus/properties-maven-plugin) | `1.2.1` | `1.3.0` |
| [org.jsonschema2pojo:jsonschema2pojo-maven-plugin](https://github.com/joelittlejohn/jsonschema2pojo) | `0.5.1` | `1.3.3` |
| [org.apache.maven.plugins:maven-enforcer-plugin](https://github.com/apache/maven-enforcer) | `3.5.0` | `3.6.3` |
| [org.apache.maven.plugins:maven-compiler-plugin](https://github.com/apache/maven-compiler-plugin) | `3.14.0` | `3.15.0` |
| [org.apache.maven.plugins:maven-shade-plugin](https://github.com/apache/maven-shade-plugin) | `3.6.0` | `3.6.2` |
| [org.apache.maven.plugins:maven-release-plugin](https://github.com/apache/maven-release) | `3.1.1` | `3.3.1` |
| [org.apache.maven.plugins:maven-surefire-plugin](https://github.com/apache/maven-surefire) | `3.5.3` | `3.5.6` |
| [org.apache.maven.plugins:m